objects/csord__Subscription_Line_Item__c.object
<CustomObject>
    <description>A billable component of a Subscription</description>
    <fields>
        <fullName>csord__Discount_Type__c</fullName>
        <description>What type of discount to apply. The value of this field determines whether the Discount Amount or Discount Percentage value is used.</description>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csord__Discount_Value__c</fullName>
        <description>The value of the discount. The value in interpreted either as an amount or a percentage, depending on the Discount Type field.</description>
        <inlineHelpText>Depending on the Discount Type field either a percentage or an amount.</inlineHelpText>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csord__Discounted_Amount__c</fullName>
        <description>Discounted amount value</description>
        <label>Discounted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csord__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__External_Identifier2__c</fullName>
        <description>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</inlineHelpText>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csord__Identification__c</fullName>
        <label>Identification</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Denotes if the item is active</description>
        <inlineHelpText>Denotes if the item is active</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csord__Is_Adhoc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies the Subscription Line Item as an Adhoc Line Item. Default value of &quot;false&quot;/&quot;unchecked&quot; represents a normal Subscription Line Item.</description>
        <inlineHelpText>Identifies the Subscription Line Item as an Adhoc Line Item. Default value of &quot;false&quot;/&quot;unchecked&quot; represents a normal Subscription Line Item.</inlineHelpText>
        <label>Is Adhoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csord__Is_Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this line item is a recurring item.</description>
        <label>Is Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csord__Line_Description__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Line_Number__c</fullName>
        <displayFormat>OL{00000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>csord__Order_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Order Request object which introduced the latest changes to this object.</description>
        <inlineHelpText>Order Request object which introduced the latest changes to this object.</inlineHelpText>
        <label>Order Request</label>
        <referenceTo>csord__Order_Request__c</referenceTo>
        <relationshipLabel>Subscription Line Items</relationshipLabel>
        <relationshipName>Subscription_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Price_Before_Discount__c</fullName>
        <label>Price Before Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csord__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__Subscription__c</fullName>
        <description>The parent Subscription of this Subscription Line Item.</description>
        <inlineHelpText>The parent Subscription of this Subscription Line Item.</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Subscription Line Items</relationshipLabel>
        <relationshipName>Subscription_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>csord__Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csord__duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csord__line_item_type__c</fullName>
        <label>Line Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Charge</fullName>
                </value>
                <value>
                    <fullName>Discount Charge</fullName>
                </value>
                <value>
                    <fullName>Time Limited Discount Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csord__offset__c</fullName>
        <label>Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csord__sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Cancelled_By_Change_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled By Change Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Delta_Status__c</fullName>
        <label>Delta Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Price Change</fullName>
                </value>
                <value>
                    <fullName>Unchanged</fullName>
                </value>
                <value>
                    <fullName>Price And Name Change</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__Line_Item_Reference_Id__c</fullName>
        <label>Line Item Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Subscription Line Item</label>
    <listViews>
        <fullName>csord__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subscription Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>